--- a/index.html
+++ b/index.html
@@ -1,62 +1,72 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="stylesheet.css" rel="stylesheet">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script defer type="text/javascript" src="coding.js"></script>
-    <title>Paradigm Shift</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="stylesheet.css" rel="stylesheet">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script defer type="text/javascript" src="coding.js"></script>
+  <title>ōeru: a paradigm shift</title>
 </head>
 
 <body>
-    <ul>
-        <li class="active">
-          <div class="section-title first">
-            <h1>Paradigm Shift</h1>
-          </div>
-          <div class="section-content">
-            <div class="video">
-                <iframe width="525" height="293" src="https://www.youtube-nocookie.com/embed/n11j73OYqOY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit voluptatum temporibus dicta reprehenderit tempore quisquam consequuntur porro omnis laboriosam praesentium at et sapiente, provident sit! Suscipit recusandae, ab ratione dignissimos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit voluptatum temporibus dicta reprehenderit tempore quisquam consequuntur porro omnis laboriosam praesentium at et sapiente, provident sit! Suscipit recusandae, ab ratione dignissimos</p>
-            </div>
-           </div>
-        </li>
-        <li>
-          <div class="section-title">
-            <h1>project room</h1>
-          </div>
-          <div class="section-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora totam delectus, eius nostrum aspernatur voluptas enim fugit ipsa magni voluptatem, odio sit accusamus vel id, commodi consequuntur possimus repellat necessitatibus!</p>
-          </div>
-        </li>
-        <li>
-          <div class="section-title">
-            <h1>gabinete de ficção</h1>
-          </div>
-          <div class="section-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur saepe vel facilis quae nihil ad aspernatur ex delectus. Tenetur nulla voluptates similique quos, quia possimus, magnam esse natus quis ipsa.</p>
-          </div>
-        </li>
-        <li>
-          <div class="section-title">
-            <h1>o filme</h1>
-          </div>
-          <div class="section-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, optio illo, delectus deleniti animi accusamus. Laboriosam maiores totam provident aliquam. Unde, incidunt amet officia a obcaecati, ducimus at molestiae nemo.</p>
-          </div>    
-        </li>
-        <li>
-            <div class="section-title">
-              <h1>manual de produção</h1>
-            </div>
-            <div class="section-content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, optio illo, delectus deleniti animi accusamus. Laboriosam maiores totam provident aliquam. Unde, incidunt amet officia a obcaecati, ducimus at molestiae nemo.</p>
-            </div>    
-          </li>
-      </ul>
+  <ul>
+    <li class="active">
+      <div class="section-title first">
+        <h1>ōeru: a paradigm shift</h1>
+      </div>
+      <div class="section-content">
+        <div class="video">
+          <video controls width="600" src="assets/teaser_1.mp4" type="video/mp4"></video>
+        </div>
+        <div class="text">
+          <p>Partindo de uma observação das condicionantes femininas presentes no filme <em>Happy Hour</em> de Ryūsuke Hamaguchi, constrói-se <em>Ōeru: a paradigm shift</em> onde o Japão se baseia numa sociedade matriarcal. As mulheres têm um papel central na família e na política, controlando o governo e as suas leis. No entanto este matriarcado não é um oposto total do patriarcado, sendo distribuídas várias responsabilidades de uma forma igualitária. Desta forma, as mulheres vivem sem estarem condicionadas a uma aparência e um certo comportamento imposto pelo homem. </p>
+          <p>Nesta ficção segue-se a vida de uma mãe casada que pretende mudar de carreira profissional. Devido às liberdades disponibilizadas pela sociedade matriarcal em que vive, esta mulher consegue escolher várias roupas diversificadas para as suas entrevistas de emprego. Não se tem de preocupar com o male gaze e pode explorar o seu próprio individualismo. </p>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="section-title">
+        <h1>project room</h1>
+      </div>
+      <div class="section-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora totam delectus, eius nostrum aspernatur
+          voluptas enim fugit ipsa magni voluptatem, odio sit accusamus vel id, commodi consequuntur possimus repellat
+          necessitatibus!</p>
+      </div>
+    </li>
+    <li>
+      <div class="section-title">
+        <h1>gabinete de ficção</h1>
+      </div>
+      <div class="section-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur saepe vel facilis quae nihil ad aspernatur
+          ex delectus. Tenetur nulla voluptates similique quos, quia possimus, magnam esse natus quis ipsa.</p>
+      </div>
+    </li>
+    <li>
+      <div class="section-title">
+        <h1>o filme</h1>
+      </div>
+      <div class="section-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, optio illo, delectus deleniti animi
+          accusamus. Laboriosam maiores totam provident aliquam. Unde, incidunt amet officia a obcaecati, ducimus at
+          molestiae nemo.</p>
+      </div>
+    </li>
+    <li>
+      <div class="section-title">
+        <h1>manual de produção</h1>
+      </div>
+      <div class="section-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, optio illo, delectus deleniti animi
+          accusamus. Laboriosam maiores totam provident aliquam. Unde, incidunt amet officia a obcaecati, ducimus at
+          molestiae nemo.</p>
+      </div>
+    </li>
+  </ul>
 </body>
+
 </html>
