--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <ul>
     <li class="active">
       <div class="section-title first">
-        <h1>ōeru: a paradigm shift</h1>
+        <h1><em>ōeru:</em> a paradigm shift</h1>
       </div>
       <div class="section-content">
         <div class="video">
