--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
           <video controls width="600" src="assets/teaser_1.mp4" type="video/mp4"></video>
         </div>
         <div class="text">
-          <p>Partindo de uma observação das condicionantes femininas presentes no filme <em>Happy Hour</em> de Ryūsuke Hamaguchi, constrói-se <em>Ōeru: a paradigm shift</em> onde o Japão se baseia numa sociedade matriarcal. As mulheres têm um papel central na família e na política, controlando o governo e as suas leis. No entanto este matriarcado não é um oposto total do patriarcado, sendo distribuídas várias responsabilidades de uma forma igualitária. Desta forma, as mulheres vivem sem estarem condicionadas a uma aparência e um certo comportamento imposto pelo homem. </p>
-          <p>Nesta ficção segue-se a vida de uma mãe casada que pretende mudar de carreira profissional. Devido às liberdades disponibilizadas pela sociedade matriarcal em que vive, esta mulher consegue escolher várias roupas diversificadas para as suas entrevistas de emprego. Não se tem de preocupar com o male gaze e pode explorar o seu próprio individualismo. </p>
+          <p>Partindo de uma observação das condicionantes femininas presentes no filme Happy Hour de Ryūsuke
+            Hamaguchi, <em>ōeru: a paradigm shift</em> imagina uma sociedade matriarcal japonesa. As mulheres têm um
+            papel central na família e na política, tendo uma maior representatividade no governo. Este matriarcado não
+            é uma diferença total do patriarcado, sendo distribuídas várias responsabilidades de uma forma igualitária.
+            Nesta sociedade as mulheres vivem sem estarem condicionadas a uma aparência e um certo comportamento imposto
+            pelo homem. </p>
+          <p>Nesta ficção segue-se a vida de uma mãe casada que pretende mudar de carreira profissional. Devido às
+            liberdades disponibilizadas pela sociedade matriarcal em que vive, consegue escolher várias roupas
+            diversificadas para as suas entrevistas de emprego. Não se tem de preocupar com o male gaze e pode explorar
+            o seu próprio individualismo. </p>
         </div>
       </div>
     </li>
@@ -31,10 +39,20 @@
       <div class="section-title">
         <h1>project room</h1>
       </div>
-      <div class="section-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora totam delectus, eius nostrum aspernatur
-          voluptas enim fugit ipsa magni voluptatem, odio sit accusamus vel id, commodi consequuntur possimus repellat
-          necessitatibus!</p>
+      <div class="section-content project">
+        <div>
+          <img src="assets/placeholder.jpg">
+          <img src="assets/placeholder.jpg">
+        </div>
+        <div>
+            <p class="text side">No project room foram representados dois polos opostos: um real e um ficcional. Através de um ambiente
+              imersivo pretendeu-se que o visitante tivesse uma experiência envolvente, compreendendo o contexto
+              cultural
+              e situacional do tema. Era convidado
+              a analisar e observar os diferentes polos, assim como incentivado a uma discussão sobre a ficção crítica.
+            </p>
+            <img src="assets/placeholder.jpg">
+        </div>
       </div>
     </li>
     <li>
@@ -42,8 +60,16 @@
         <h1>gabinete de ficção</h1>
       </div>
       <div class="section-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur saepe vel facilis quae nihil ad aspernatur
-          ex delectus. Tenetur nulla voluptates similique quos, quia possimus, magnam esse natus quis ipsa.</p>
+        <div class="video-gabinete">
+          <video controls width="1000" src="assets/ovum.mp4" type="video/mp4"></video>
+        </div>
+        <div class="text">
+          <p>Com seguimento do projeto, desenvolveu-se uma ficção que demonstra os pensamentos de uma mulher que não
+            quer ser mãe. Esta expressão transmite-se através do exemplo de alguém que recusa os papéis que a sociedade
+            japonesa tipicamente impõe, de uma forma honesta e direta. O título advém deste sentimento e intenção,
+            significando <em>ovum</em> óvulo em inglês. Este é uma célula sexual feminina, sem ser fecundada. Desta
+            forma dá-se foco à individualidade e independência da mulher.</p>
+        </div>
       </div>
     </li>
     <li>
