--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="section-content">
         <div class="video">
-          <video controls width="600" src="assets/teaser_1.mp4" type="video/mp4"></video>
+          <video muted controls autoplay src="assets/teaser_1.mp4" type="video/mp4"></video>
         </div>
         <div class="text">
           <p>Partindo de uma observação das condicionantes femininas presentes no filme Happy Hour de Ryūsuke
@@ -35,61 +35,97 @@
         </div>
       </div>
     </li>
-    <li>
+    <li class="hidden">
       <div class="section-title">
         <h1>project room</h1>
       </div>
       <div class="section-content project">
         <div>
-          <img src="assets/placeholder.jpg">
-          <img src="assets/placeholder.jpg">
+          <img src="assets/project room_2.jpg">
+          <img src="assets/project room_3.jpg">
+          <!-- <img src="assets/project room_5.jpg"> -->
         </div>
-        <div>
-            <p class="text side">No project room foram representados dois polos opostos: um real e um ficcional. Através de um ambiente
-              imersivo pretendeu-se que o visitante tivesse uma experiência envolvente, compreendendo o contexto
-              cultural
-              e situacional do tema. Era convidado
-              a analisar e observar os diferentes polos, assim como incentivado a uma discussão sobre a ficção crítica.
-            </p>
-            <img src="assets/placeholder.jpg">
+        <div class="project_room">
+          <video class="video_project" muted controls autoplay src="assets/video project room.mp4"
+            type="video/mp4"></video>
+          <p class="text_side">No project room foram representados dois polos opostos: um real e um ficcional. Através
+            de um ambiente
+            imersivo pretendeu-se que o visitante tivesse uma experiência envolvente, compreendendo o contexto
+            cultural
+            e situacional do tema. Era convidado
+            a analisar e observar os diferentes polos, assim como incentivado a uma discussão sobre a ficção crítica.
+          </p>
         </div>
       </div>
     </li>
-    <li>
+    <li class="hidden">
       <div class="section-title">
         <h1>gabinete de ficção</h1>
       </div>
       <div class="section-content">
         <div class="video-gabinete">
-          <video controls width="1000" src="assets/ovum.mp4" type="video/mp4"></video>
-        </div>
-        <div class="text">
-          <p>Com seguimento do projeto, desenvolveu-se uma ficção que demonstra os pensamentos de uma mulher que não
-            quer ser mãe. Esta expressão transmite-se através do exemplo de alguém que recusa os papéis que a sociedade
-            japonesa tipicamente impõe, de uma forma honesta e direta. O título advém deste sentimento e intenção,
-            significando <em>ovum</em> óvulo em inglês. Este é uma célula sexual feminina, sem ser fecundada. Desta
-            forma dá-se foco à individualidade e independência da mulher.</p>
+          <video controls poster="assets/placeholder_gabinete.jpg" src="assets/ovum.mp4" type="video/mp4"></video>
+          <div class="text_gabinete text">
+            <p>Com seguimento do projeto, desenvolveu-se uma ficção que demonstra os pensamentos de uma mulher que não
+              quer ser mãe. Esta expressão transmite-se através do exemplo de alguém que recusa os papéis que a
+              sociedade
+              japonesa tipicamente impõe, de uma forma honesta e direta. O título advém deste sentimento e intenção,
+              significando <em>ovum</em> óvulo em inglês. Este é uma célula sexual feminina, sem ser fecundada. Desta
+              forma dá-se foco à individualidade e independência da mulher.</p>
+          </div>
         </div>
       </div>
     </li>
-    <li>
+    <li class="hidden">
       <div class="section-title">
         <h1>o filme</h1>
       </div>
-      <div class="section-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, optio illo, delectus deleniti animi
-          accusamus. Laboriosam maiores totam provident aliquam. Unde, incidunt amet officia a obcaecati, ducimus at
-          molestiae nemo.</p>
+      <div class="section-content filme">
+        <div>
+          <video class="filme_video" muted controls autoplay loop src="assets/excerto_1.mp4" type="video/mp4"></video>
+          <video class="filme_video" muted controls autoplay loop src="assets/excerto_2.mp4" type="video/mp4"></video>
+          <video class="filme_video" muted controls autoplay loop src="assets/excerto_3.mp4" type="video/mp4"></video>
+        </div>
+        <div>
+          <video class="filme_video" muted controls autoplay loop src="assets/excerto_4.mp4" type="video/mp4"></video>
+          <video class="filme_video" muted controls autoplay loop src="assets/excerto_5.mp4" type="video/mp4"></video>
+          <video class="filme_video" muted controls autoplay loop src="assets/excerto_6.mp4" type="video/mp4"></video>
+        </div>
+        <div>
+          <video class="filme_video" muted controls autoplay loop src="assets/excerto_7.mp4" type="video/mp4"></video>
+          <video class="filme_video" muted controls autoplay loop src="assets/excerto_8.mp4" type="video/mp4"></video>
+          <video class="filme_video" muted controls autoplay loop src="assets/excerto_9.mp4" type="video/mp4"></video>
+        </div>
+        <div>
+          <p class="text filme_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, optio illo,
+            delectus deleniti animi
+            accusamus. Laboriosam maiores totam provident aliquam. Unde, incidunt amet officia a obcaecati, ducimus at
+            molestiae nemo.</p>
+        </div>
       </div>
     </li>
-    <li>
+    <li class="hidden">
       <div class="section-title">
         <h1>manual de produção</h1>
       </div>
       <div class="section-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, optio illo, delectus deleniti animi
-          accusamus. Laboriosam maiores totam provident aliquam. Unde, incidunt amet officia a obcaecati, ducimus at
-          molestiae nemo.</p>
+        <div class="manual">
+          <div>
+            <p class="text manual_text">Foram elaborados 4 volumes ao longo do projeto. Estes contêm pesquisa, análise
+              e fundamentação do tema.<br><a href="assets/1_à proposta de adaptação do filme.pdf>">O primeiro volume</a>
+              possui o começo da exploração da narrativa.<br><a href="assets/2_à revelação do processo.pdf">O segundo
+                volume</a> tem toda a pesquisa efetuada que se achou pertinente partilhar, servindo como suporte da
+              critica feita.<br><a href="assets/3_à ficção representada nos objetos que a veinculam.pdf">O terceiro
+                volume</a> é um registo dos objetos produzidos, assim como do <em>project room</em><br><a
+                href="assets/4_a uma reflexão sobre processo e resultados.pdf">O quarto volume</a> é o mais pessoal.
+              Trata-se de uma espécie de diário que expõe o que senti durante o processo de realização do projeto.</p>
+          </div>
+          <img id="manual_de_producao" src="assets/preview site.jpg">
+        </div>
+      <div class="footer">
+        <p class="informacao">Ana Ingrez</p><p class="informacao">Design de Comunicação VI</p><p class="informacao">2022</p><p class="informacao"><em>now she turns her head to the right
+            but that means nothing</em></p>
+      </div>
       </div>
     </li>
   </ul>
