--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <div>
           <img src="assets/project room_2.jpg">
           <img src="assets/project room_3.jpg">
-          <!-- <img src="assets/project room_5.jpg"> -->
+          <!-- <img src="assets/project room-5.jpg"> -->
         </div>
-        <div class="project_room">
-          <video class="video_project" muted controls autoplay src="assets/video project room.mp4"
+        <div class="project-room">
+          <video class="video-project" muted controls autoplay src="assets/video project room.mp4"
             type="video/mp4"></video>
-          <p class="text_side">No project room foram representados dois polos opostos: um real e um ficcional. Através
+          <p class="text-side">No project room foram representados dois polos opostos: um real e um ficcional. Através
             de um ambiente
             imersivo pretendeu-se que o visitante tivesse uma experiência envolvente, compreendendo o contexto
             cultural
@@ -65,7 +65,7 @@
       <div class="section-content">
         <div class="video-gabinete">
           <video controls poster="assets/placeholder_gabinete.jpg" src="assets/ovum.mp4" type="video/mp4"></video>
-          <div class="text_gabinete text">
+          <div class="text-gabinete text">
             <p>Com seguimento do projeto, desenvolveu-se uma ficção que demonstra os pensamentos de uma mulher que não
               quer ser mãe. Esta expressão transmite-se através do exemplo de alguém que recusa os papéis que a
               sociedade
@@ -82,25 +82,27 @@
       </div>
       <div class="section-content filme">
         <div>
-          <video class="filme_video" muted controls autoplay loop src="assets/excerto_1.mp4" type="video/mp4"></video>
-          <video class="filme_video" muted controls autoplay loop src="assets/excerto_2.mp4" type="video/mp4"></video>
-          <video class="filme_video" muted controls autoplay loop src="assets/excerto_3.mp4" type="video/mp4"></video>
+          <video class="filme-video" muted controls autoplay loop src="assets/excerto_1.mp4" type="video/mp4"></video>
+          <video class="filme-video" muted controls autoplay loop src="assets/excerto_2.mp4" type="video/mp4"></video>
+          <video class="filme-video" muted controls autoplay loop src="assets/excerto_3.mp4" type="video/mp4"></video>
         </div>
         <div>
-          <video class="filme_video" muted controls autoplay loop src="assets/excerto_4.mp4" type="video/mp4"></video>
-          <video class="filme_video" muted controls autoplay loop src="assets/excerto_5.mp4" type="video/mp4"></video>
-          <video class="filme_video" muted controls autoplay loop src="assets/excerto_6.mp4" type="video/mp4"></video>
+          <video class="filme-video" muted controls autoplay loop src="assets/excerto_4.mp4" type="video/mp4"></video>
+          <video class="filme-video" muted controls autoplay loop src="assets/excerto_5.mp4" type="video/mp4"></video>
+          <video class="filme-video" muted controls autoplay loop src="assets/excerto_6.mp4" type="video/mp4"></video>
         </div>
         <div>
-          <video class="filme_video" muted controls autoplay loop src="assets/excerto_7.mp4" type="video/mp4"></video>
-          <video class="filme_video" muted controls autoplay loop src="assets/excerto_8.mp4" type="video/mp4"></video>
-          <video class="filme_video" muted controls autoplay loop src="assets/excerto_9.mp4" type="video/mp4"></video>
+          <video class="filme-video" muted controls autoplay loop src="assets/excerto_7.mp4" type="video/mp4"></video>
+          <video class="filme-video" muted controls autoplay loop src="assets/excerto_8.mp4" type="video/mp4"></video>
+          <video class="filme-video" muted controls autoplay loop src="assets/excerto_9.mp4" type="video/mp4"></video>
         </div>
         <div>
-          <p class="text filme_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, optio illo,
-            delectus deleniti animi
-            accusamus. Laboriosam maiores totam provident aliquam. Unde, incidunt amet officia a obcaecati, ducimus at
-            molestiae nemo.</p>
+          <p class="text filme-text">Com um propósito crítico, este projeto apoia-se como referência de base na
+            longa-metragem Happy Hour de Ryūsuke Hamaguchi. Este filme segue a vida de quatro personagens femininas nos
+            seus trinta anos, enquanto experienciam as suas vidas pessoais e profissionais. Durante as cinco horas e
+            dezassete minutos de exibição
+            o espetador é confrontado com todas as problemáticas da história que, apesar de esta ser puramente
+            ficcional, é extremamente realista.</p>
         </div>
       </div>
     </li>
@@ -109,24 +111,52 @@
         <h1>manual de produção</h1>
       </div>
       <div class="section-content">
+        <p class="text manual-text">Foram elaborados 4 volumes ao longo do projeto. Estes contêm pesquisa, análise
+          e fundamentação do tema.</p>
         <div class="manual">
-          <div>
-            <p class="text manual_text">Foram elaborados 4 volumes ao longo do projeto. Estes contêm pesquisa, análise
-              e fundamentação do tema.<br><a href="assets/1_à proposta de adaptação do filme.pdf>">O primeiro volume</a>
-              possui o começo da exploração da narrativa.<br><a href="assets/2_à revelação do processo.pdf">O segundo
-                volume</a> tem toda a pesquisa efetuada que se achou pertinente partilhar, servindo como suporte da
-              critica feita.<br><a href="assets/3_à ficção representada nos objetos que a veinculam.pdf">O terceiro
-                volume</a> é um registo dos objetos produzidos, assim como do <em>project room</em><br><a
-                href="assets/4_a uma reflexão sobre processo e resultados.pdf">O quarto volume</a> é o mais pessoal.
-              Trata-se de uma espécie de diário que expõe o que senti durante o processo de realização do projeto.</p>
+          <div class="imagens-manual">
+            <div>
+              <div class="image-text">
+                <a href="assets/1_à proposta de adaptação do filme.pdf"><img id="manual-de-producao"
+                    src="assets/preview site_1.jpg"></a>
+                <p class="text-top"><a href="assets/1_à proposta de adaptação do filme.pdf">O 1º volume</a>
+                  possui o começo da exploração da narrativa.</p>
+              </div>
+              <div class="image-text">
+                <a href="assets/3_à ficção representada nos objetos que a veinculam.pdf"><img id="manual-de-producao"
+                    src="assets/preview site_3.jpg"></a>
+                <p class="text-top"><a href="assets/3_à ficção representada nos objetos que a veinculam.pdf">O 3º
+                    volume</a> é um registo dos objetos produzidos, assim como do <em>project room</em></p>
+              </div>
+            </div>
+            <div>
+              <div class="image-text">
+                <a href="assets/2_à revelação do processo.pdf"><img id="manual-de-producao"
+                    src="assets/preview site_2.jpg"></a>
+                <p class="text-top"><a href="assets/2_à revelação do processo.pdf">O 2º volume</a> tem toda a pesquisa
+                  efetuada que se achou pertinente partilhar, servindo como suporte da
+                  critica feita.</p>
+              </div>
+              <div class="image-text">
+                <a href="assets/4_a uma reflexão sobre processo e resultados.pdf"><img id="manual-de-producao"
+                    src="assets/preview site_4.jpg"></a>
+                <p class="text-top"><a href="assets/4_a uma reflexão sobre processo e resultados.pdf">O 4º volume</a> é
+                  o
+                  mais pessoal.
+                  Trata-se de uma espécie de diário que expõe o que senti durante o processo de realização do projeto.
+                </p>
+              </div>
+            </div>
           </div>
-          <img id="manual_de_producao" src="assets/preview site.jpg">
         </div>
-      <div class="footer">
-        <p class="informacao">Ana Ingrez</p><p class="informacao">Design de Comunicação VI</p><p class="informacao">2022</p><p class="informacao"><em>now she turns her head to the right
+        <div class="footer">
+          <p class="informacao">Ana Ingrez</p>
+          <p class="informacao">Design de Comunicação VI</p>
+          <p class="informacao"><em>now she turns her head to the right
             but that means nothing</em></p>
-      </div>
-      </div>
+          <p class="informacao">2022</p>
+        </div>
+      </p>
     </li>
   </ul>
 </body>
