--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
   <ul>
     <li class="active">
       <div class="section-title first">
-        <h1><em>ōeru:</em> a paradigm shift</h1>
+        <h1 class="hidden"><em>ōeru:</em> a paradigm shift</h1>
+      </div>
+      <div class="section-content">
+        <div class="text-landing">
+          <h1><em>ōeru:</em> a paradigm shift</h1>
+          <p>Como é que seria a vida das mulheres japonesas numa sociedade matriarcal?</p>
+        </div>
+      </div>
+    </li>
+    <li class="hidden">
+      <div class="section-title">
+        <h1>sinopse</h1>
       </div>
       <div class="section-content">
         <div class="video">
@@ -46,7 +57,7 @@
           <!-- <img src="assets/project room-5.jpg"> -->
         </div>
         <div class="project-room">
-          <video class="video-project" muted controls autoplay src="assets/video project room.mp4"
+          <video class="video-project" muted controls loop autoplay src="assets/video project room.mp4"
             type="video/mp4"></video>
           <p class="text-side">No project room foram representados dois polos opostos: um real e um ficcional. Através
             de um ambiente
@@ -119,13 +130,13 @@
               <div class="image-text">
                 <a href="assets/1_à proposta de adaptação do filme.pdf"><img id="manual-de-producao"
                     src="assets/preview site_1.jpg"></a>
-                <p class="text-top"><a href="assets/1_à proposta de adaptação do filme.pdf">O 1º volume</a>
+                <p class="text-top">O <a href="assets/1_à proposta de adaptação do filme.pdf">1º volume</a>
                   possui o começo da exploração da narrativa.</p>
               </div>
               <div class="image-text">
                 <a href="assets/3_à ficção representada nos objetos que a veinculam.pdf"><img id="manual-de-producao"
                     src="assets/preview site_3.jpg"></a>
-                <p class="text-top"><a href="assets/3_à ficção representada nos objetos que a veinculam.pdf">O 3º
+                <p class="text-top">O <a href="assets/3_à ficção representada nos objetos que a veinculam.pdf">3º
                     volume</a> é um registo dos objetos produzidos, assim como do <em>project room</em></p>
               </div>
             </div>
@@ -133,14 +144,14 @@
               <div class="image-text">
                 <a href="assets/2_à revelação do processo.pdf"><img id="manual-de-producao"
                     src="assets/preview site_2.jpg"></a>
-                <p class="text-top"><a href="assets/2_à revelação do processo.pdf">O 2º volume</a> tem toda a pesquisa
+                <p class="text-top">O <a href="assets/2_à revelação do processo.pdf">2º volume</a> tem toda a pesquisa
                   efetuada que se achou pertinente partilhar, servindo como suporte da
                   critica feita.</p>
               </div>
               <div class="image-text">
                 <a href="assets/4_a uma reflexão sobre processo e resultados.pdf"><img id="manual-de-producao"
                     src="assets/preview site_4.jpg"></a>
-                <p class="text-top"><a href="assets/4_a uma reflexão sobre processo e resultados.pdf">O 4º volume</a> é
+                <p class="text-top">O <a href="assets/4_a uma reflexão sobre processo e resultados.pdf">4º volume</a> é
                   o
                   mais pessoal.
                   Trata-se de uma espécie de diário que expõe o que senti durante o processo de realização do projeto.
